[package]
name = "hanblas"
version = "0.1.0"
authors = ["JasonWang <1103870790@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hanblas"
path = "src/lib.rs"

[features]
naive = []
avx = []
avx2 = []
sse = []
sse2 = []
sse3 = []
sse4_1 = []
sse4_2 = []
ssse3 = []
neon = []

multi_thread = []

default = ["naive"]

[[bin]]
name = "benchmark_asum"
path = "examples/benchmark_asum.rs"


[[bin]]
name = "benchmark_gemm"
path = "examples/benchmark_gemm.rs"


[dependencies]
libc = "0.2.69"
num-complex = "0.2.4"
num-traits = "0.2.11"
half = "1.6.0"
rand = "0.7.3"
rayon = "1.3.0"
csv = "1.1"