[package]
name = "hanblas"
version = "0.0.1"
authors = ["JunWang <jstzwj@aliyun.com>"]
edition = "2021"
license = "MIT"
description = "A BLAS written in Rust"
repository = "https://github.com/jstzwj/HanBLAS/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hanblas"
path = "src/lib.rs"

[features]
naive = []
dynamic_arch = []
api_cblas = []
api_lapack = []
thread = []

default = ["dynamic_arch"]

[[bin]]
name = "temp_test"
path = "examples/temp_test.rs"

[[bin]]
name = "benchmark_sasum"
path = "examples/benchmark_sasum.rs"


[[bin]]
name = "benchmark_gemm"
path = "examples/benchmark_gemm.rs"


[dependencies]
libc = "0.2.168"
num-complex = "0.2.4"
num-traits = "0.2.11"
half = "1.6.0"
rand = "0.7.3"
rayon = "1.3.0"
csv = "1.1"
blas = "0.22.0"